Update weather , dashboard and reminders
